refactor the invitation logic
