# docs/swagger.yaml
@@ -4,8 +4,6 @@ definitions:
     type: object
   internal_handler.SendInvitationRequest:
     properties:
-      company_id:
-        type: integer
       dep_id:
         type: integer
       email:
@@ -366,6 +364,30 @@ definitions:
           $ref: '#/definitions/jumyste-app-backend_internal_entity.UserResponse'
         type: array
     type: object
+  jumyste-app-backend_internal_entity.Company:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      ownerId:
+        type: integer
+      photoUrl:
+        type: string
+    type: object
+  jumyste-app-backend_internal_entity.Department:
+    properties:
+      company_id:
+        type: integer
+      hr_count:
+        type: integer
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
   jumyste-app-backend_internal_entity.JobApplicationWithResume:
     properties:
       ai_matching_score:
@@ -479,6 +501,8 @@ definitions:
     type: object
   jumyste-app-backend_internal_entity.UserResponse:
     properties:
+      company:
+        $ref: '#/definitions/jumyste-app-backend_internal_entity.Company'
       created_at:
         type: string
       email:
@@ -848,6 +872,27 @@ paths:
       summary: Get chats by user ID
       tags:
       - Chats
+  /departments/all:
+    get:
+      description: Retrieves a list of all vacancies
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of departments
+          schema:
+            items:
+              $ref: '#/definitions/jumyste-app-backend_internal_entity.Department'
+            type: array
+        "500":
+          description: Failed to fetch departments
+          schema:
+            $ref: '#/definitions/jumyste-app-backend_internal_dto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get all Departments
+      tags:
+      - Departments
   /invitations:
     post:
       consumes:
