# internal/entity/department.go
@@ -1,0 +1,8 @@
+package entity
+
+type Department struct {
+	ID        int    `json:"id"`
+	CompanyId int    `json:"company_id"`
+	Name      string `json:"name"`
+	HrCount   int    `json:"hr_count"`
+}
